# warpdev-hiring-challenge

./: Cargo.toml  README.md  TROUBLESHOOTING.md  WARP.md  WINDOWS.md  analyze  analyze-rust  analyze-rust.bat  analyze.bat  mission_challenge.md  test  test.cmd
.github/workflows/: test.yml
src/: main.rs  mars_mission_analyzer.awk  solution.awk
tests/: integration_test.rs  run_tests.bat  run_tests.sh
