[package]
name = "mars-mission-analyzer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mars-mission-analyzer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
